# PSE_Metro_Simulatie

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Line.cpp  Makefile  MetroSimulation.cpp  MetroSimulation.h  MetroSimultie.cpp  MetroSimultie.h  MetroXMLParser.cpp  MetroXMLParser.h  ParserTest.cpp  Station.cpp  Station.h  TODO  TODO.md  Tram.cpp  Tram.h  XMLParser.cpp  XMLParser.h  cmake_install.cmake  install_GUI_tools.sh  licence  main.cpp  main_executable  metro_simulation.gitignore  testing_tool
GUI/: CMakeLists.txt  GUI_MetroSimulation.cpp  GUI_MetroSimulation.h  SimThread.cpp  SimThread.h  main_GUI.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
RENDER/: CMakeLists.txt  MetroRenderer.cpp  MetroRenderer.h  RenderObject.cpp  RenderObject.h  engine.cc
RENDER/Include/: easy_image.cc  easy_image.h  l_parser.cc  l_parser.h  vector3d.cc  vector3d.h
RENDER/Objects/: AmbientLight.cpp  Calculator.cpp  Calculator.h  Camera.h  ClippingSettings.h  Face.cpp  Face.h  ImageDetails.cpp  ImageDetails.h  InfLight.cpp  IniLoader.cpp  IniLoader.h  LSystem2D.cpp  LSystem2D.h  LSystem3D.cpp  LSystem3D.h  Light.h  Line2D.h  Object3D.cpp  Object3D.h  Object3DFactory.cpp  Point2D.h  PointLight.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShadowLight.cpp  Triangle.h  Wireframe.cpp  Wireframe.h  ZBuffer.cpp  ZBuffer.h
documents/: PlanTmpl20.xls  TijdTmpl.xls  TimeTable.xls  TimeTable_2.0.xls
documents/doxy/: Doxyfile
documents/doxy/html/: _design_by_contract_8h_source.html  _g_u_i___metro_simulation_8h_source.html  _line_8h_source.html  _logger_8h_source.html  _metro_renderer_8h_source.html  _metro_sim_statistics_8h_source.html  _metro_simulation_8h_source.html  _metro_system_8h_source.html  _metro_system_output_8h_source.html  _metro_x_m_l_parser_8h_source.html  _sim_thread_8h_source.html  _track_8h_source.html  _tram_8h_source.html  _tram_stop_8h_source.html  annotated.html  class_albatros-members.html  class_albatros.html  class_g_u_i___metro_simulation-members.html  class_g_u_i___metro_simulation.html  class_halte-members.html  class_halte.html  class_line-members.html  class_line.html  class_logger-members.html  class_logger.html  class_main_window-members.html  class_main_window.html  class_metro_renderer-members.html  class_metro_renderer.html  class_metro_sim_statistics-members.html  class_metro_sim_statistics.html  class_metro_simulation-members.html  class_metro_simulation.html  class_metro_system-members.html  class_metro_system.html  class_metro_system_output-members.html  class_metro_system_output.html  class_metro_x_m_l_parser-members.html  class_metro_x_m_l_parser.html  class_metrostation-members.html  (+29 more)
documents/doxy/latex/: _design_by_contract_8h_source.tex  _g_u_i___metro_simulation_8h_source.tex  _line_8h_source.tex  _logger_8h_source.tex  _metro_renderer_8h_source.tex  _metro_sim_statistics_8h_source.tex  _metro_simulation_8h_source.tex  _metro_system_8h_source.tex  _metro_system_output_8h_source.tex  _metro_x_m_l_parser_8h_source.tex  _sim_thread_8h_source.tex  _track_8h_source.tex  _tram_8h_source.tex  _tram_stop_8h_source.tex  annotated.tex  class_albatros.tex  class_g_u_i___metro_simulation.eps  class_g_u_i___metro_simulation.tex  class_halte.eps  class_halte.tex  class_line.tex  class_logger.tex  class_main_window.tex  class_metro_renderer.tex  class_metro_sim_statistics.tex  class_metro_simulation.eps  class_metro_simulation.tex  class_metro_system.tex  class_metro_system_output.tex  class_metro_x_m_l_parser.tex  class_metrostation.eps  class_metrostation.tex  class_p_c_c.tex  class_sim_thread.eps  class_sim_thread.tex  (+9 more)
documents/html/: _design_by_contract_8h_source.html  _line_8h_source.html  _logger_8h_source.html  _metro_simulation_8h_source.html  _metro_system_8h_source.html  _metro_x_m_l_parser_8h_source.html  _station_8h_source.html  _track_8h_source.html  _tram_8h_source.html  annotated.html  annotated_dup.js  class_line-members.html  class_line.html  class_line.js  class_logger-members.html  class_logger.html  class_metro_simulation-members.html  class_metro_simulation.html  class_metro_simulation.js  class_metro_system-members.html  class_metro_system.html  class_metro_system.js  class_metro_x_m_l_parser-members.html  class_metro_x_m_l_parser.html  class_metro_x_m_l_parser.js  class_station-members.html  class_station.html  class_station.js  class_track-members.html  class_track.html  class_track.js  class_tram-members.html  class_tram.html  class_tram.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  (+4 more)
documents/latex/: _line_8h_source.tex  _logger_8h_source.tex  _metro_simulation_8h_source.tex  _metro_system_8h_source.tex  _metro_x_m_l_parser_8h_source.tex  _station_8h_source.tex  _track_8h_source.tex  _tram_8h_source.tex  annotated.tex  class_line.tex  class_logger.tex  class_metro_simulation.tex  class_metro_system.tex  class_metro_x_m_l_parser.tex  class_station.tex  class_track.tex  class_tram.tex  files.tex  refman.aux  refman.idx  refman.tex  refman.toc  tabu_doxygen.sty
src/: Line.cpp  Line.h  Logger.cpp  Logger.h  MetroRenderer.cpp  MetroRenderer.h  MetroSimStatistics.cpp  MetroSimStatistics.h  MetroSimulation.cpp  MetroSimulation.h  MetroSystem.cpp  MetroSystem.h  MetroSystemOutput.cpp  MetroSystemOutput.h  MetroXMLParser.cpp  MetroXMLParser.h  ParserTest.cpp  SimpleOutput.cpp  SimpleOutput.h  Station.cpp  Station.h  Track.cpp  Track.h  Tram.cpp  Tram.h  TramStop.cpp  TramStop.h  main.cpp
tinyxml/: changes.txt  readme.txt  tinyxml.h  tinyxmlparser.cpp
tinyxml/docs/: classTiXmlAttribute.html  classTiXmlBase.html  classTiXmlComment.html  classTiXmlDeclaration.html  classTiXmlDocument.html  classTiXmlElement.html  classTiXmlNode.html  classTiXmlText.html  classTiXmlUnknown.html  index.html  tinystr_8h_source.html  tinyxml_8h_source.html  tutorial0.html
tst/: LineTest.cpp  ParserTest.cpp  SimTest.cpp  StatisticsTest.cpp  TestFuncs.h  TestOuput.cpp  TestParser.cpp  TestSim.cpp  TramTest.cpp  testf.cpp
xmlFiles/: simFile.xml  test2.xml  verifyTest2.xml  verifyTest3.xml  verifyTest4.xml
(+113 files in other folders)
